--- a/css/styles.css
+++ b/css/styles.css
@@ -11418,8 +11418,8 @@ html {
 }
 
 .masthead {
-  padding-top: calc(6rem + 74px);
-  padding-bottom: 6rem;
+  padding-top: calc(1rem);
+  padding-bottom: 1rem;
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
@@ -11434,8 +11434,8 @@ html {
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: calc(6rem + 104px);
-    padding-bottom: 6rem;
+    padding-top: calc(8rem);
+    padding-bottom: 1rem;
   }
   .masthead .masthead-heading {
     font-size: 4rem;
@@ -11494,3 +11494,70 @@ html {
 .copyright {
   background-color: #1a252f;
 }
+
+.map-container-5{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+  }
+  .map-container-5 iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+  }
+
+  .heading {
+    font-weight: 700;
+    color: #5d4267;
+  }
+  .card.colorful-card .testimonial-card .card-up {
+    height: 95px;
+  }
+  .card.colorful-card .testimonial-card .avatar {
+    border: 3px solid #fff !important;
+  }
+  .card.booking-card {
+    background-color: #c7f2e3;
+  }
+  .card.booking-card .fa {
+    color: #f7aa00;
+  }
+  .card.booking-card .card-body .card-text {
+    color: #db2d43;
+  }
+  .card.card.booking-card .chip {
+    background-color: #87e5da;
+  }
+  .card.booking-card .card-body hr {
+    border-top: 1px solid #f7aa00;
+  }
+  .mimosa {
+    background-color: #F0C05A;
+  }
+  .fuchsia-rose-text {
+    color: #db0075;
+  }
+  .aqua-sky-text {
+    color: #5cc6c3;
+  }
+  .mimosa-text {
+    color: #F0C05A;
+  }
+  .list-inline-item .fas, .list-inline-item .far {
+    font-size: .8rem;
+  }
+  .chili-pepper-text {
+    color: #9B1B30;
+  }
+  .collapse-content .fa.fa-heart:hover {
+    color: #f44336 !important;
+  }
+  .collapse-content .fa.fa-share-alt:hover {
+    color: #0d47a1 !important;
+  }
+  .card-wrapper.card-action {
+    min-height: 400px;
+  }
