Página Jogadores com modelos, Início com foto do drone.

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,11 +250,13 @@ sup {
 }
 
 a {
-  color: #1abc9c;
+ /* color: #1abc9c;*/
+  color: #ffffff;
   text-decoration: underline;
 }
 a:hover {
   color: #15967d;
+ /* color: #1a252f;  footer color */
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -4527,10 +4529,11 @@ textarea.form-control-lg {
   background-clip: border-box;
   border: 0.125rem solid rgba(0, 0, 0, 0.125);
   border-radius: 0.5rem;
+  margin: 1.5rem;
 }
 .card > hr {
-  margin-right: 0;
-  margin-left: 0;
+  margin-right: 15px;
+  margin-left: 15px;
 }
 .card > .list-group {
   border-top: inherit;
@@ -4787,21 +4790,24 @@ textarea.form-control-lg {
   display: flex;
   flex-wrap: wrap;
   padding: 0 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   list-style: none;
+  color: #ffffff;
 }
 
 .breadcrumb-item + .breadcrumb-item {
   padding-left: 0.5rem;
+  color: #ffffff;
 }
 .breadcrumb-item + .breadcrumb-item::before {
   float: left;
   padding-right: 0.5rem;
-  color: #6c757d;
+  color: #ffffff;
   content: var(--bs-breadcrumb-divider, "/") /* rtl: var(--bs-breadcrumb-divider, "/") */;
 }
 .breadcrumb-item.active {
-  color: #6c757d;
+  color: #2c3e50;
+/*  color: #6c757d; */
 }
 
 .pagination {
@@ -11430,6 +11436,13 @@ html {
 .form-floating label {
   font-size: 1.5rem;
   color: #6c757d;
+}
+
+.image {
+  background-image: url(../assets/img/fotos/drone.jpg);
+/*  padding-top:   */
+background-position: center;  
+/* height: 250px; */
 }
 
 .masthead {
