--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,13 @@
   background-position: 50%;
 }
 
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
@@ -11439,7 +11446,7 @@ html {
 }
 
 .image {
-  background-image: url(../assets/img/fotos/drone.jpg);
+  background-image: url(../assets/img/fotos/drone-crop-black.jpg);
 /*  padding-top:   */
 background-position: center;  
 /* height: 250px; */
