--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,10 @@
     display: none;
 }
 
+.objeto_resultado {
+  margin: 5vw;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
@@ -158,7 +162,8 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  font-size: calc(1.275rem + 0.3vw);
+  font-size: 2vw;
+  /* font-size: calc(1.275rem + 0.3vw); */
 }
 @media (min-width: 1200px) {
   h4, .h4 {
@@ -4536,11 +4541,11 @@ textarea.form-control-lg {
   background-clip: border-box;
   border: 0.125rem solid rgba(0, 0, 0, 0.125);
   border-radius: 0.5rem;
-  margin: 1.5rem;
+  margin: 1vw;
 }
 .card > hr {
-  margin-right: 15px;
-  margin-left: 15px;
+  margin-right: 1vw;
+  margin-left: 1vw;
 }
 .card > .list-group {
   border-top: inherit;
@@ -4563,11 +4568,11 @@ textarea.form-control-lg {
 
 .card-body {
   flex: 1 1 auto;
-  padding: 1rem 1rem;
+  padding: 1vw;
 }
 
 .card-title {
-  margin-bottom: 0.5rem;
+  margin: 0.5vw 0 0 0;
 }
 
 .card-subtitle {
