WIP página de resultados

--- a/app/src/app/resultados/resultados.component.html
+++ b/app/src/app/resultados/resultados.component.html
@@ -1,2 +1,22 @@
 
 <corujao-breadcrumbs paginaAtual="Resultados"></corujao-breadcrumbs>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4 col-sm-12 margem-vertical">
+            <h3 class="text-center">Escolha a data do jogo:</h3><br>
+            <input type="date" [formControl]="inputData" class="form-control">
+        </div>
+        <div *ngIf="dataSelecionada" class="col-lg-8 col-sm-12 margem-vertical">
+            <h1 class="text-center">{{ dataSelecionada | date:'dd/MM/yyyy' }}</h1><br>
+            <h2 class="text-center" *ngIf="!jogo">Não houve jogo na data selecionada</h2><br>
+            <div *ngIf="jogo">
+                <h2 class="text-center">BRANCO {{ jogo.golsBranco }} x {{ jogo.golsVerde }} VERDE</h2><br>
+
+                <corujao-eventos-partida [eventos]="jogo.eventos"></corujao-eventos-partida>
+
+                <img src="assets/img/resultado_jogo.jpeg" class="img-fluid" alt="Resultado" />
+            </div>
+        </div>
+    </div>
+</div>
