--- a/app/src/app/componentes/eventos-partida/eventos-partida.component.html
+++ b/app/src/app/componentes/eventos-partida/eventos-partida.component.html
@@ -1,13 +1,25 @@
 
-<h3>Eventos Partida works</h3>
-
 <div class="lista-eventos">
-    <div *ngFor="let evento of eventos" class="evento-partida">
+    <div class="evento-partida resultado">
+        <div class="bloco-dados-evento esquerdo">
+            <h3>BRANCO</h3>
+            <h3>{{ jogo.golsBranco }}</h3>
+        </div>
+        <div class="bloco-meio">x</div>
+        <div class="bloco-dados-evento direito">
+            <h3>VERDE</h3>
+            <h3>{{ jogo.golsVerde }}</h3>
+        </div>
+    </div>
+    <div *ngFor="let evento of jogo.eventos" class="evento-partida">
         <div class="bloco-placeholder" *ngIf="!isEventoTimeBranco(evento)"
             [ngClass]="{'esquerdo': !isEventoTimeBranco(evento), 'direito': isEventoTimeBranco(evento)}"></div>
         <div class="bloco-meio" *ngIf="!isEventoTimeBranco(evento)"></div>
         <div class="bloco-dados-evento" [ngClass]="{'esquerdo': isEventoTimeBranco(evento), 'direito': !isEventoTimeBranco(evento)}">
-            <span>{{ evento.jogador }}</span>
+            <span>
+                {{ evento.jogador }}
+            </span>
+            <img *ngIf="isGol(evento)" src="assets/img/football-ball.png" class="icone-tipo-evento">
         </div>
         <div class="bloco-meio" *ngIf="isEventoTimeBranco(evento)"></div>
         <div class="bloco-placeholder" *ngIf="isEventoTimeBranco(evento)"
