--- a/app/src/app/componentes/eventos-partida/eventos-partida.component.scss
+++ b/app/src/app/componentes/eventos-partida/eventos-partida.component.scss
@@ -6,18 +6,41 @@
     .evento-partida {
         display: flex;
 
+        h3 {
+            margin: 0.5rem 5px;
+        }
+
+        &.resultado,
+        .bloco-meio {
+            background-color: #e0e0e0;
+        }
+        &.resultado .bloco-meio {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+
         .bloco-placeholder,
         .bloco-dados-evento {
             width: 48%;
         }
         .bloco-meio {
             width: 4%;
-            background-color: #20272d;
         }
 
         .bloco-dados-evento {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
             &.direito {
                 text-align: right;
+                flex-direction: row-reverse;
+            }
+
+            .icone-tipo-evento {
+                height: 22px;
+                margin: 0 5px;
             }
         }
     }
