--- a/app/src/app/jogadores/jogadores.component.html
+++ b/app/src/app/jogadores/jogadores.component.html
@@ -1,6 +1,12 @@
 
 <corujao-breadcrumbs paginaAtual="Jogadores"></corujao-breadcrumbs>
 
+<!-- filtro por posição -->
+ 
+<marquee>Ablublubé blublublé blublé </marquee>
+
+<!-- filtro por posição -->
+
 <!-- Coluna -->
 <div class="row justify-content-center">
     
