--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -111,7 +111,7 @@ body {
 }
 
 hr {
-  margin: 1rem 0;
+  margin: 1.5vw 0;
   color: inherit;
   background-color: currentColor;
   border: 0;
@@ -139,6 +139,12 @@ h1, .h1 {
   }
 }
 
+@media (max-width: 500px) {
+  h1, .h1 {
+    font-size: 1rem;
+  }
+}
+
 h2, .h2 {
   font-size: calc(1.325rem + 0.9vw);
 }
@@ -149,7 +155,7 @@ h2, .h2 {
 }
 
 h3, .h3 {
-  font-size: calc(1.3rem + 0.6vw);
+  font-size: 1.3rem;
 }
 @media (min-width: 1200px) {
   h3, .h3 {
@@ -158,8 +164,8 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  font-size: 2vw;
-  /* font-size: calc(1.275rem + 0.3vw); */
+  // font-size: 2vw;
+  font-size: calc(1.275rem + 0.3vw);
 }
 @media (min-width: 1200px) {
   h4, .h4 {
@@ -515,6 +521,7 @@ progress {
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
+  margin: 2vw 2vw;
 }
 
 .display-1 {
@@ -703,8 +710,8 @@ progress {
   flex-shrink: 0;
   width: 100%;
   max-width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * .5);
-  padding-left: calc(var(--bs-gutter-x) * .5);
+  padding-right: 1vw; // calc(var(--bs-gutter-x) * .5);
+  padding-left: 1vw; // calc(var(--bs-gutter-x) * .5);
   margin-top: var(--bs-gutter-y);
 }
 
@@ -4568,7 +4575,7 @@ textarea.form-control-lg {
 }
 
 .card-title {
-  margin: 0.5vw 0 0 0;
+  margin: 2vw 0 0 0;
 }
 
 .card-subtitle {
@@ -4797,10 +4804,14 @@ textarea.form-control-lg {
 .breadcrumb {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 0;
   margin-bottom: 0.5rem;
   list-style: none;
-  color: #ffffff;
+  color: #ffffff;}
+
+@media (min-width: 1200px) {
+  .breadcrumb {
+  padding: 1.5rem 0 0 0;
+}
 }
 
 .breadcrumb-item + .breadcrumb-item {
@@ -6756,6 +6767,7 @@ textarea.form-control-lg {
 
 .d-flex {
   display: flex !important;
+  padding-top: 3vw;
 }
 
 .d-inline-flex {
@@ -7231,11 +7243,11 @@ textarea.form-control-lg {
 }
 
 .m-3 {
-  margin: 1rem !important;
+  margin: 0.5rem !important;
 }
 
 .m-4 {
-  margin: 1.5rem !important;
+  margin: 0.5rem !important;
 }
 
 .m-5 {
@@ -7373,7 +7385,7 @@ textarea.form-control-lg {
 }
 
 .mb-0 {
-  margin-bottom: 0 !important;
+  margin-bottom: 0.5rem !important;
 }
 
 .mb-1 {
@@ -7393,7 +7405,7 @@ textarea.form-control-lg {
 }
 
 .mb-5 {
-  margin-bottom: 3rem !important;
+  margin-bottom: 3vw !important;
 }
 
 .mb-auto {
@@ -11309,7 +11321,7 @@ html {
 }
 
 .page-section {
-  padding: 6rem 0;
+  padding: 2rem 0;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -11323,7 +11335,7 @@ html {
 }
 
 .divider-custom {
-  margin: 1.25rem 0 1.5rem;
+  margin: 0 0 0.5rem;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -11454,8 +11466,8 @@ background-position: center;
 }
 
 .masthead {
-  padding-top: calc(1rem);
-  padding-bottom: 1rem;
+  padding-top: 6rem;
+  // padding-bottom: 1rem;
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
@@ -11465,17 +11477,17 @@ background-position: center;
   font-size: 1.25rem;
 }
 .masthead .masthead-avatar {
-  width: 15rem;
+  width: 10rem;
 }
 
 @media (min-width: 392px) {
   .masthead {
-    padding-top: calc(8rem);
+    padding-top: 6rem;
     padding-bottom: 1rem;
   }
   .masthead .masthead-heading {
-    font-size: 4rem;
-    line-height: 3.5rem;
+    font-size: 2.75rem;
+    line-height: 2.75rem;
   }
   .masthead .masthead-subheading {
     font-size: 1.5rem;
@@ -11521,8 +11533,8 @@ background-position: center;
 }
 
 .footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 5vw;
+  padding-bottom: 5vw;
   background-color: #2c3e50;
   color: #fff;
 }
