--- a/app/src/app/componentes/eventos-partida/eventos-partida.component.scss
+++ b/app/src/app/componentes/eventos-partida/eventos-partida.component.scss
@@ -32,6 +32,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 0 0.5rem 0 0.5rem;
 
             &.direito {
                 text-align: right;
