--- a/app/src/app/jogadores/jogadores.component.html
+++ b/app/src/app/jogadores/jogadores.component.html
@@ -2,14 +2,20 @@
 <corujao-breadcrumbs paginaAtual="Jogadores"></corujao-breadcrumbs>
 
 <!-- filtro por posição -->
- 
-<marquee>Ablublubé blublublé blublé </marquee>
-
+<div container="flex">
+    <div class="col-md-16 text-center h3" style="padding: 1rem 0.5rem 0.5rem 0.5rem;">Filtrar por posição:</div>
+    <div class="col-md-16 text-center">
+        <button type="button" class="btn btn-success">Goleiro</button>
+        <button type="button" class="btn btn-success">Zagueiro</button>
+        <button type="button" class="btn btn-success">Lateral</button>
+        <button type="button" class="btn btn-success">Meio-campo</button>
+        <button type="button" class="btn btn-success">Atacante</button>
+    </div>
+</div>
 <!-- filtro por posição -->
 
 <!-- Coluna -->
 <div class="row justify-content-center">
-    
     <!-- Cards -->
     <div *ngFor="let jogador of jogadores$ | async" class="card" style="max-width: 20vw; min-width: 200px; ">
         <!-- Imagem -->
@@ -52,7 +58,7 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <button class="btn btn-primary justify-content-center" href="#!" data-bs-dismiss="modal">
+                        <button class="btn btn-primary justify-content-center" data-bs-dismiss="modal">
                                 <i class="fas fa-times fa-fw"></i>Fechar
                         </button>
                     </div>
@@ -62,35 +68,6 @@
     </div>
 </div>
 
-<!-- Portfolio Modal 2-->
-<div class="portfolio-modal modal fade" id="ModalRoger" tabindex="-1" aria-labelledby="ModalRoger" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-            <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
-            <div class="modal-body pb-5">
-                <div class="container justify-content-center">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <!-- Portfolio Modal - Title-->
-                            <h2 class="text-secondary text-center text-uppercase ">Róger Witcak</h2>
-                            <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid mb-5" src="assets/img/jogadoresModal/jogador.png" alt="Róger Witcak" />
-                            <!-- Portfolio Modal - Text-->
-                        </div>
-                        <div class="col-lg-6 d-flex align-items-center">
-                            <h4>Nome completo: RÓGER EDUARDO WITCAK<br> Data de nascimento: XX/XX/XXXX <br> Altura: 1,70m<br> Posição: Meio-campo </h4>
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <button class="btn btn-primary justify-content-center" href="#!" data-bs-dismiss="modal">
-                                <i class="fas fa-times fa-fw"></i>Fechar
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <!-- Portfolio Modal 3-->
 <div class="portfolio-modal modal fade" id="ModalDiegoW" tabindex="-1" aria-labelledby="ModalDiegoW" aria-hidden="true">
     <div class="modal-dialog modal-xl">
