--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -203,7 +203,7 @@ address {
 
 ol,
 ul {
-  padding-left: 2rem;
+  padding-left: 0;
 }
 
 ol,
@@ -2512,10 +2512,10 @@ textarea.form-control-lg {
   background-size: contain;
   border: 1px solid rgba(0, 0, 0, 0.25);
   -webkit-appearance: none;
-     -moz-appearance: none;
+    -moz-appearance: none;
           appearance: none;
-  -webkit-print-color-adjust: exact;
-          color-adjust: exact;
+  -print-color-adjust: exact;
+//    color-adjust: exact;
 }
 .form-check-input[type=checkbox] {
   border-radius: 0.25em;
@@ -3020,6 +3020,7 @@ textarea.form-control-lg {
 
 .btn {
   display: inline-block;
+  margin: 0.3vw;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -3033,7 +3034,7 @@ textarea.form-control-lg {
           user-select: none;
   background-color: transparent;
   border: 0.125rem solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: 0.2rem 0.75rem;
   font-size: 1rem;
   border-radius: 0.5rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3043,8 +3044,32 @@ textarea.form-control-lg {
     transition: none;
   }
 }
-.btn:hover {
+@media (max-width: 403px) {
+  .btn {
+    display: inline-block;
+  margin: 0.1rem;
+  font-weight: 400;
+  line-height: 1.5;
   color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: transparent;
+  border: 0.1rem solid transparent;
+  padding: 0.3rem 0.4rem;
+  font-size: 1rem;
+  border-radius: 0.2rem;
+  }
+}
+.btn:hover {
+  color: #fff;
+  background-color: #198754;
+  border-color: #198754;
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
@@ -3117,8 +3142,8 @@ textarea.form-control-lg {
 
 .btn-success {
   color: #fff;
-  background-color: #198754;
-  border-color: #198754;
+  background-color: #1abc9c;
+  border-color: #1abc9c;
 }
 .btn-success:hover {
   color: #fff;
@@ -3141,8 +3166,8 @@ textarea.form-control-lg {
 }
 .btn-success:disabled, .btn-success.disabled {
   color: #fff;
-  background-color: #198754;
-  border-color: #198754;
+  background-color: #1abc9c;
+  border-color: #1abc9c;
 }
 
 .btn-info {
@@ -4539,10 +4564,10 @@ textarea.form-control-lg {
   display: flex;
   flex-direction: column;
   min-width: 0;
-  word-wrap: break-word;
+  word-wrap: normal; // break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 0.125rem solid rgba(0, 0, 0, 0.125);
+  border: 0.2rem solid #1abc9c;
   border-radius: 0.5rem;
   margin: 1vw;
 }
@@ -4571,11 +4596,11 @@ textarea.form-control-lg {
 
 .card-body {
   flex: 1 1 auto;
-  padding: 1vw;
+  padding: 0.5rem;
 }
 
 .card-title {
-  margin: 2vw 0 0 0;
+  margin: 0.2rem 0 0 0;
 }
 
 .card-subtitle {
