exclusão de imagens inuteis

--- a/app/src/app/jogadores/jogadores.component.html
+++ b/app/src/app/jogadores/jogadores.component.html
@@ -5,11 +5,11 @@
 <div container="flex">
     <div class="col-md-16 text-center h3" style="padding: 1rem 0.5rem 0.5rem 0.5rem;">Filtrar por posição:</div>
     <div class="col-md-16 text-center">
-        <button type="button" class="btn btn-success">Goleiro</button>
-        <button type="button" class="btn btn-success">Zagueiro</button>
-        <button type="button" class="btn btn-success">Lateral</button>
-        <button type="button" class="btn btn-success">Meio-campo</button>
-        <button type="button" class="btn btn-success">Atacante</button>
+        <button type="button" class="btn btn-success text-nowrap">Goleiro</button>
+        <button type="button" class="btn btn-success text-nowrap">Zagueiro</button>
+        <button type="button" class="btn btn-success text-nowrap">Lateral</button>
+        <button type="button" class="btn btn-success text-nowrap">Meio-campo</button>
+        <button type="button" class="btn btn-success text-nowrap">Atacante</button>
     </div>
 </div>
 <!-- filtro por posição -->
