--- a/app/src/app/inicio/inicio.component.html
+++ b/app/src/app/inicio/inicio.component.html
@@ -4,7 +4,7 @@
     <header class="masthead text-white text-center">
         <div class="container d-flex align-items-center align-content-center flex-column">
             <!-- Masthead Avatar Image-->
-            <img class="masthead-avatar m-3" src="assets/img/corujao.png" alt="S.E.R. Corujão" />
+            <img class="masthead-avatar m-3" src="{{baseUrl}}assets/img/corujao.png" alt="S.E.R. Corujão" />
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase m-4">S.E.R. Corujão</h1>
             <!-- Icon Divider-->
@@ -42,7 +42,7 @@
                             <div class="card">
                                 <!--Card image-->
                                 <div class="view overlay">
-                                    <img class="card-img-top" src="assets/img/ranking3.png" alt="Ranking">
+                                    <img class="card-img-top" src="{{baseUrl}}assets/img/ranking3.png" alt="Ranking">
                                     <div class="mask rgba-white-slight"></div>
                                 </div>
                                 <!--Card content-->
@@ -60,7 +60,7 @@
                             <div class="card">
                                 <!--Card image-->
                                 <div class="view overlay">
-                                    <img class="card-img-top img-fluid" src="assets/img/tables.png" alt="Resultados">
+                                    <img class="card-img-top img-fluid" src="{{baseUrl}}assets/img/tables.png" alt="Resultados">
                                     <div class="mask rgba-white-slight"></div>
                                 </div>
                                 <!--Card content-->
@@ -78,7 +78,7 @@
                             <div class="card">
                                 <!--Card image-->
                                 <div class="view overlay">
-                                    <img class="card-img-top img-fluid" src="assets/img/jogador2.png" alt="Jogadores">
+                                    <img class="card-img-top img-fluid" src="{{baseUrl}}assets/img/jogador2.png" alt="Jogadores">
                                     <div class="mask rgba-white-slight"></div>
                                 </div>
                                 <!--Card content-->
