--- a/app/src/app/jogadores/jogadores.component.html
+++ b/app/src/app/jogadores/jogadores.component.html
@@ -50,7 +50,7 @@
                             <!-- Portfolio Modal - Title-->
                             <h2 class="text-secondary text-center text-uppercase ">Gabriel Dias</h2>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid mb-5" src="assets/img/jogadoresModal/jogador.png" alt="Gabriel Hettwer Dias" />
+                            <img class="img-fluid mb-5" src="{{baseUrl}}assets/img/jogadoresModal/jogador.png" alt="Gabriel Hettwer Dias" />
                             <!-- Portfolio Modal - Text-->
                         </div>
                         <div class="col-lg-6 d-flex align-items-center">
@@ -80,7 +80,7 @@
                             <!-- Portfolio Modal - Title-->
                             <h2 class="text-secondary text-center text-uppercase ">Diego Woiciekoski</h2>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid mb-5" src="assets/img/jogadoresModal/jogador.png" alt="Diego Woiciekoski" />
+                            <img class="img-fluid mb-5" src="{{baseUrl}}assets/img/jogadoresModal/jogador.png" alt="Diego Woiciekoski" />
                             <!-- Portfolio Modal - Text-->
                         </div>
                         <div class="col-lg-6 d-flex align-items-center">
@@ -110,7 +110,7 @@
                             <!-- Portfolio Modal - Title-->
                             <h2 class="text-secondary text-center text-uppercase ">Nome do Jogador</h2>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid mb-5" src="assets/img/jogadoresModal/jogador.png" alt="nomejogador" />
+                            <img class="img-fluid mb-5" src="{{baseUrl}}assets/img/jogadoresModal/jogador.png" alt="nomejogador" />
                             <!-- Portfolio Modal - Text-->
                         </div>
                         <div class="col-lg-6 d-flex align-items-center">
@@ -140,7 +140,7 @@
                             <!-- Portfolio Modal - Title-->
                             <h2 class="text-secondary text-center text-uppercase ">Nome do Jogador</h2>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid mb-5" src="assets/img/jogadoresModal/jogador.png" alt="nomejogador" />
+                            <img class="img-fluid mb-5" src="{{baseUrl}}assets/img/jogadoresModal/jogador.png" alt="nomejogador" />
                             <!-- Portfolio Modal - Text-->
                         </div>
                         <div class="col-lg-6 d-flex align-items-center">
@@ -169,7 +169,7 @@
                             <!-- Portfolio Modal - Title-->
                             <h2 class="text-secondary text-center text-uppercase ">Nome do Jogador</h2>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid mb-5" src="assets/img/jogadoresModal/jogador.png" alt="nomejogador" />
+                            <img class="img-fluid mb-5" src="{{baseUrl}}assets/img/jogadoresModal/jogador.png" alt="nomejogador" />
                             <!-- Portfolio Modal - Text-->
                         </div>
                         <div class="col-lg-6 d-flex align-items-center">
