Imagem dos jogadores

--- a/app/src/app/jogadores/jogadores.component.html
+++ b/app/src/app/jogadores/jogadores.component.html
@@ -21,7 +21,7 @@
         <!-- Imagem -->
         <div class="avatar bg-image hover-overlay ripple" data-mdb-ripple-color="light">
     
-            <img [src]="jogador.imagem" [alt]="jogador.nome" class="rounded-circle img-fluid" />
+            <img [src]="baseUrl + jogador.imagem" [alt]="jogador.nome" class="rounded-circle img-fluid" />
             <div class="mask rounded-circle img-responsive" style="background-color: rgba(251, 251, 251, 0.15);"></div>
     
             <!-- Texto do Card -->
