atualizada lista de jogadores

--- a/app/src/app/jogadores/jogadores.component.html
+++ b/app/src/app/jogadores/jogadores.component.html
@@ -10,6 +10,7 @@
         <button type="button" class="btn btn-success text-nowrap" (click)="filtrarPosicao('LAT')">Lateral</button>
         <button type="button" class="btn btn-success text-nowrap" (click)="filtrarPosicao('MEC')">Meio-campo</button>
         <button type="button" class="btn btn-success text-nowrap" (click)="filtrarPosicao('ATA')">Atacante</button>
+        <button type="button" class="btn btn-success text-nowrap" (click)="showAll()">TODOS</button>
     </div>
 </div>
 <!-- filtro por posição -->
