--- a/app/src/app/ranking/ranking.component.html
+++ b/app/src/app/ranking/ranking.component.html
@@ -64,6 +64,9 @@
         <span *ngIf="isOrdemGols">Gols</span>
         <span *ngIf="isOrdemAssiduidade">Assiduidade</span>
     </h1>
+    <h6 class="text-center">
+        Com base em {{jogosConsiderados}} jogos no período
+    </h6>
 
     <table class="table table-stripped">
         <thead>
