--- a/app/src/app/componentes/eventos-partida/eventos-partida.component.scss
+++ b/app/src/app/componentes/eventos-partida/eventos-partida.component.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
 
+    .escalacao-partida,
     .eventos-partida {
         display: flex;
         flex-direction: row;
